tests/NormalTests/paczka1/small_fuzzy/77651738.err
Error in line 7: A283 A283 75,44
Error in line 5: A283 S250 82,3
Error in line 2: W3IDT A283 50,8
